k8s/app2.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-boot-scw
spec:
  serviceName: spring-boot-scw
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
      - name: spring-boot
        image: rg.nl-ams.scw.cloud/namespace-mirek/cloud-mvp/mirek-spring-boot:23
        ports:
            - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /aws/v3/api-docs
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /aws/v3/api-docs
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 10
          periodSeconds: 8
          failureThreshold: 3            
        volumeMounts:
        - mountPath: "/data"
          name: csi-vol-scw
        - mountPath: "/logs"
          name: logs          
      volumes:
        - name: logs    
  volumeClaimTemplates:
  - metadata:
      name: csi-vol-scw
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: sbs-5k
      resources:
        requests:
          storage: 1Gi
