k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service-lb
spec:
  selector:
    app: spring-boot
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
