k8s/verto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verto-greencell-testowa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: verto-greencell-testowa
  template:
    metadata:
      labels:
        app: verto-greencell-testowa
    spec:
      containers:
        - name: verto-greencell-testowa
          image: rg.pl-waw.scw.cloud/streamsoft-cloud-test-cr/bwi:1763060535538
          ports:
            - containerPort: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: verto-greencell-testowa
  annotations:
    external-dns.alpha.kubernetes.io/hostname: verto-bwi.cloud-test-mvp.eu
spec:
  type: LoadBalancer
  ports:
    - port: 7070
      targetPort: 7070
  selector:
    app: verto-greencell-testowa
