k8s/load-balancer-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service-lb-ingress
spec:
  selector:
    app: spring-boot
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: spring-boot-ingress
spec:
 ingressClassName: nginx
 rules:
 - host: boot.cloud-mvp.eu
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: spring-boot-service-lb-ingress
           port:
             number: 80
